--- a/src/app/modules/Accounting/JournalEntry/JournalEntry.component.scss
+++ b/src/app/modules/Accounting/JournalEntry/JournalEntry.component.scss
@@ -10,7 +10,7 @@ mat-form-field{
 {   
     flex:1 0 150px;
 }
-.mat-column-Amount
+.mat-column-Amount,.mat-column-BaseAmount
 {
     flex: 1 0 100px;
 }
