--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -50,7 +50,7 @@
             </button>
         </form>
         <br>
-        <div style="max-width: 1200px;">
+        <div style="overflow:auto;max-width: 1200px;">
             <mat-table #table [dataSource]="dataSource" matSort>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
