--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.scss
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.scss
@@ -1,11 +1,15 @@
 mat-cell,mat-footer-cell{
     border-right: 1px solid lightgray;
 }
-mat-cell:last-of-type,mat-header-cell:last-of-type{
+mat-cell:last-of-type, mat-header-cell:last-of-type{
     padding-right: 0px;
 }
+mat-header-cell:first-of-type, mat-cell:first-of-type{
+    padding-left: 15px;
+}
 mat-footer-cell:last-of-type{
-    padding-right: 0px;
+    justify-content: flex-end;
+    padding-right: 15px;
 }
 button {
     outline: none;
@@ -21,35 +25,34 @@ svg {
 
 .mat-column-MonthName
 {
-    flex: 1 0 70px;
+    flex: 1 1 70px;
     padding-left: 5px;
 }
  
-.mat-column-BaseAmount,.mat-column-TotalCredit,.mat-column-TotalDebit,
-.mat-column-Amount,.mat-column-Balance{
+.mat-column-BaseAmount1,
+.mat-column-TotalCredit,
+.mat-column-TotalDebit,
+.mat-column-Amount,
+.mat-column-Balance1,
+.mat-column-Action
+{
     justify-content: center;
-    flex:1 0 60px;
+    flex:1 1 60px;
 }
 .mat-column-FeeName
 {
-    flex:1 0 250px;
+    flex:1 1 250px;
     padding-left: 5px;
 }
-// .mat-column-Amount
-// {
-//     //justify-content: center;
-//     flex:1 0 100px;
-// }
-.mat-column-Action,.mat-column-Action1
-{
-    justify-content: center;
-    flex:1 0 60px;
-    
+.mat-column-Balance,.mat-column-BaseAmount,.mat-column-Amount{
+    justify-content: flex-end;
+    padding-right: 15px;
+    flex:1 1 100px;
 }
 .mat-column-SlNo,
 .mat-column-SlNo1
- {
-    flex:1 0 60px;
+ {    
+    flex:1 1 50px;
 }
 
 .mat-column-PaymentAmt {
