--- a/src/app/modules/Accounting/ledger-account/ledger-account.component.html
+++ b/src/app/modules/Accounting/ledger-account/ledger-account.component.html
@@ -87,7 +87,7 @@
                     </mat-form-field>
                 </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="AccountSubGroupId">
+            <!-- <ng-container matColumnDef="AccountSubGroupId">
                 <mat-header-cell *matHeaderCellDef mat-sort-header>Sub group
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element">
@@ -100,7 +100,7 @@
                         </mat-select>
                     </mat-form-field>
                 </mat-cell>
-            </ng-container>
+            </ng-container> -->
             <ng-container matColumnDef="ContactNo">
                 <mat-header-cell *matHeaderCellDef mat-sort-header>Contact no.
                 </mat-header-cell>
