--- a/src/app/modules/Accounting/accountnature/accountnature.component.html
+++ b/src/app/modules/Accounting/accountnature/accountnature.component.html
@@ -2,28 +2,33 @@
     <div><strong>Account Nature</strong></div>
 </div>
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-<form [formGroup]="searchForm" style="display:flex;flex-direction: row;">
-
-    <!-- <mat-form-field appearance="outline" [style.width.px]="200">
-        <mat-label>Name</mat-label>
-        <input type="text" matInput formControlName="searchAccountName" [maxlength]="50" autocomplete="Off">
-    </mat-form-field> -->
-
-    <div style="margin-right:15px;padding: 15px 10px 2px 15px;height: 55px;">
-        <mat-radio-group formControlName="searchDebitOrCredit">
-            <mat-radio-button class="example-margin" checked="false" value="true">Debit</mat-radio-button>&nbsp;
-            <mat-radio-button class="example-margin" checked="true" value="false">Credit</mat-radio-button>
-        </mat-radio-group>
-    </div>
-    <span>
+<span>
+    <form [formGroup]="searchForm">
+        <mat-form-field appearance="outline" [style.width.px]="350">
+            <mat-label>account</mat-label>
+            <input type="text" matInput formControlName="searchAccountName" [matAutocomplete]="auto">
+            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                <mat-option *ngFor="let option of filteredAccounts | async" [value]="option">
+                    {{option.AccountName}}
+                </mat-option>
+            </mat-autocomplete>
+        </mat-form-field>       
+       
+        <mat-form-field appearance="outline" [style.width.px]="200">
+            <mat-label>sub account</mat-label>
+            <mat-select formControlName="searchParentId">
+                <mat-option *ngFor="let item of AccountNatureList" [value]="item.AccountNatureId">{{item.AccountName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
         <button [disabled]="loading" mat-raised-button color="accent" (click)="GetAccountNature()">
             <mat-icon>search</mat-icon>
             <mat-icon *ngIf="loading">
                 <mat-spinner diameter="20" color="Blue"></mat-spinner>
             </mat-icon>
         </button>
-    </span>
-</form>
+    </form>
+</span>
 <mat-table #table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="AccountNatureId">
         <mat-header-cell *matHeaderCellDef mat-sort-header>Id
