--- a/src/app/modules/classes/classdetail/classdetail.component.html
+++ b/src/app/modules/classes/classdetail/classdetail.component.html
@@ -14,10 +14,10 @@
         </mat-select>
     </mat-form-field>
     <button [disabled]="loading" matTooltip="search" mat-raised-button color="accent" (click)="GetClassMasters()">
-         <mat-icon>search</mat-icon>
-                            <mat-icon *ngIf="loading">
-                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                            </mat-icon>
+        <mat-icon>search</mat-icon>
+        <mat-icon *ngIf="loading">
+            <mat-spinner diameter="20" color="Blue"></mat-spinner>
+        </mat-icon>
     </button>
 </form>
 <mat-table #table [dataSource]="dataSource" style="overflow: auto;" matSort>
@@ -147,13 +147,12 @@
             </button>
         </mat-header-cell>
         <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-            <button [disabled]="loading || !element.Action" matTooltip="save" 
-mat-raised-button color="accent"
+            <button [disabled]="loading || !element.Action" matTooltip="save" mat-raised-button color="accent"
                 (click)="UpdateOrSave(element)">
-                 <mat-icon>save</mat-icon>
-                            <mat-icon *ngIf="loading">
-                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                            </mat-icon>
+                <mat-icon>save</mat-icon>
+                <mat-icon *ngIf="loading">
+                    <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                </mat-icon>
             </button>
         </mat-cell>
     </ng-container>
