--- a/src/app/modules/evaluation/evaluationresult/evaluationresult.component.scss
+++ b/src/app/modules/evaluation/evaluationresult/evaluationresult.component.scss
@@ -1,12 +1,27 @@
-mat-form-field{
+mat-form-field {
     margin-right: 15px;
-    width:98%
+    width       : 98%
 }
-mat-cell:first-of-type{
+
+mat-cell:first-of-type {
     padding-left: 0px;
 }
+
 .icon {
     font-size: 12px;
-    height: 15px ;
-    width: 12px ;
-  }
+    height   : 15px;
+    width    : 12px;
+}
+
+.history {
+    box-shadow: 0px 0px 1px 1px lightgray;
+    width     : 100%;
+    min-height: 50px;
+    padding   : 15px;
+    margin    : 15px;
+
+}
+
+.historydisplay:hover {
+    box-shadow: 0px 0px 3px 3px lightgray;
+}
