--- a/src/app/modules/student/addstudentclass/addstudentclass.component.html
+++ b/src/app/modules/student/addstudentclass/addstudentclass.component.html
@@ -58,7 +58,7 @@
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
         </mat-grid-tile>
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
+        <!-- <mat-grid-tile [colspan]="1" [rowspan]="1">
             <mat-form-field appearance="outline">
                 <mat-label>House</mat-label>
                 <mat-select formControlName="HouseId">
@@ -67,10 +67,8 @@
                         {{p.MasterDataName}}
                     </mat-option>
                 </mat-select>
-                <!-- <span class="text-danger" *ngIf="f.FeeTypeId.touched && f.FeeTypeId.hasError('required')">Fee type is
-                        required.</span> -->
             </mat-form-field>
-        </mat-grid-tile>
+        </mat-grid-tile> -->
         <mat-grid-tile [colspan]="1" [rowspan]="1">
             <mat-form-field appearance="outline">
                 <mat-label>Remarks</mat-label>
