--- a/src/app/modules/student/studentboard/studentboard.component.html
+++ b/src/app/modules/student/studentboard/studentboard.component.html
@@ -3,10 +3,18 @@
     <mat-card-subtitle style="margin:20px"
         style="align-items: center; font-weight: bold; background-color:lightgray;padding:15px;margin: 0px 20px 0px 20px;display: flex;justify-content: space-between;">
         <span>{{StudentName}}</span>
-        <span><button (click)="back()" matTooltip="back" class="mat-raised-button">
-                <mat-icon>arrow_back</mat-icon>
-            </button>
-        </span>
+        <div>
+            <span *ngIf="StudentId>0" style="margin-right: 15px;">
+                <button (click)="back()" matTooltip="dashboard" mat-raised-button>
+                    <mat-icon>arrow_back</mat-icon>
+                </button>
+            </span>
+            <span *ngIf="StudentId>0">
+                <button (click)="fee()" matTooltip="fee" mat-raised-button>
+                    <mat-icon>payments</mat-icon>
+                </button>
+            </span>
+        </div>
     </mat-card-subtitle>
     <mat-card-content style="margin:20px">
         <mat-tab-group style="max-width: 1200px;" [selectedIndex]="selectedIndex"
