--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
@@ -11,9 +11,14 @@
                 </span><span>{{studentInfoTodisplay.StudentFeeType}}</span>
             </span>
         </span>
-        <span><button (click)="back()" matTooltip="back" class="mat-raised-button">
+        <span>
+            <button (click)="back()" matTooltip="dashboard" style="margin-right:15px" mat-raised-button>
                 <mat-icon>arrow_back</mat-icon>
-            </button></span>
+            </button>
+            <button (click)="detail()" matTooltip="detail" mat-raised-button>
+                <mat-icon>pageview</mat-icon>
+            </button>
+        </span>
     </mat-card-subtitle>
     <mat-card-content style="margin: 0px 20px 20px 20px;">
         <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
@@ -23,7 +28,8 @@
                     <mat-icon>payments</mat-icon>&nbsp;Payments
                 </ng-template>
                 <div style="display:flex;width: 100%;">
-                    <div style="min-width:400px; margin-top:15px;display: flex;flex-direction: column;border: 1px solid lightgray;">
+                    <div
+                        style="min-width:400px; margin-top:15px;display: flex;flex-direction: column;border: 1px solid lightgray;">
                         <div id="printSection" style="width: 100%;">
                             <mat-table #table [dataSource]="dataSource">
                                 <ng-container matColumnDef="SlNo1">
@@ -52,7 +58,8 @@
                                 </ng-container>
                                 <ng-container matColumnDef="TotalDebit">
                                     <mat-header-cell *matHeaderCellDef style="display: flex;justify-content: center;">
-                                        <span style="padding-left:15px;"> Payable Amount </span></mat-header-cell>
+                                        <span style="padding-left:15px;"> Payable Amount </span>
+                                    </mat-header-cell>
                                     <mat-cell *matCellDef="let element">
                                         {{element.TotalDebit}}
                                     </mat-cell>
@@ -91,7 +98,7 @@
                                 <mat-header-cell *matHeaderCellDef> Sr.No. </mat-header-cell>
                                 <mat-cell *matCellDef="let element"> {{element.SlNo}} </mat-cell>
                                 <mat-footer-cell *matFooterCellDef></mat-footer-cell>
-                            </ng-container>                         
+                            </ng-container>
                             <ng-container matColumnDef="FeeName">
                                 <mat-header-cell *matHeaderCellDef> Particulars
                                 </mat-header-cell>
@@ -104,19 +111,20 @@
                                         </mat-form-field>
                                     </div>
                                 </mat-cell>
-                                <mat-footer-cell *matFooterCellDef>                                    
-                                        <b>Total</b>                                    
+                                <mat-footer-cell *matFooterCellDef>
+                                    <b>Total</b>
                                 </mat-footer-cell>
                             </ng-container>
                             <ng-container matColumnDef="Balance">
-                                <mat-header-cell *matHeaderCellDef style="display:flex;justify-content:center"> 
+                                <mat-header-cell *matHeaderCellDef style="display:flex;justify-content:center">
                                     <span>Balance</span>
                                 </mat-header-cell>
                                 <mat-cell *matCellDef="let element" style="padding-right:15px;">
                                     {{element.Balance}}
                                 </mat-cell>
-                                <mat-footer-cell *matFooterCellDef style="display:flex;justify-content:flex-end;padding-right: 15px;">                                    
-                                        {{Balance}}                                    
+                                <mat-footer-cell *matFooterCellDef
+                                    style="display:flex;justify-content:flex-end;padding-right: 15px;">
+                                    {{Balance}}
                                 </mat-footer-cell>
                             </ng-container>
                             <ng-container matColumnDef="BaseAmount">
@@ -135,13 +143,12 @@
                                     <mat-form-field>
                                         <input style="text-align: right" (keyup)="onBlur(element)"
                                             [disabled]="element.AmountEditable==0" matInput max="100000"
-                                            [(ngModel)]="element.Amount" 
-                                            [value]="element.Amount" 
-                                            [maxlength]="5"
+                                            [(ngModel)]="element.Amount" [value]="element.Amount" [maxlength]="5"
                                             autocomplete="Off">
                                     </mat-form-field>
                                 </mat-cell>
-                                <mat-footer-cell *matFooterCellDef style="display:flex;justify-content:flex-end;padding-right: 15px;">
+                                <mat-footer-cell *matFooterCellDef
+                                    style="display:flex;justify-content:flex-end;padding-right: 15px;">
                                     {{ TotalAmount}}
                                 </mat-footer-cell>
                             </ng-container>
@@ -184,8 +191,8 @@
                                         </mat-form-field>
                                     </span>
                                 </form>
-                                <button [disabled]="loading || TotalAmount==0 || Permission=='read'"
-                                    matTooltip="pay" mat-mini-fab (click)="billpayment()">
+                                <button [disabled]="loading || TotalAmount==0 || Permission=='read'" matTooltip="pay"
+                                    mat-mini-fab (click)="billpayment()">
                                     <mat-icon>payments</mat-icon>
                                     <mat-icon *ngIf="loading">
                                         <mat-spinner diameter="20" color="Blue"></mat-spinner>
